# label_pipeline

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  install.sh
config/: advanced-labeling.conf  advanced.conf  example.conf  settlement_labels.config
scripts/: pipeline.sh
